--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quaderno di informatica</title>
 </head>
 <body>
-    
+    <center><h1>quaderno di informatica</h1></center>
+    <div class="elenco_es">
+        <p>esercizi:</p>
+        <ul>
+            <li><a href="esercizio1.html">esercizio 1</a></li>
+        </ul>
+    </div>
 </body>
 </html>
