--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="elenco_es">
         <p>esercizi:</p>
         <ul>
-            <li><a href="esercizio 1/esercizio1_1.php">esercizio 1</a></li>
+            <li><a href="esercizio 1/esercizio1.php">esercizio 1</a></li>
+            <li><a href="esercizio 2/esercizio2.php">esercizio 2</a></li>
         </ul>
     </div>
 </body>
