--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="esercizio 1/esercizio1.php">esercizio 1</a></li>
             <li><a href="esercizio 2/esercizio2.php">esercizio 2</a></li>
+            <li><a href="DB_es1/auth.html">esercizio database 1</a></li>
         </ul>
     </div>
 </body>
