--- a/traccia_esame2017/login.html
+++ b/traccia_esame2017/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>registrati o accedi:</h1>
-    <button><a href="registrazione-autista.html">autista</a></button>
+    <button><a href="registrazione-autista.php">autista</a></button>
     <button><a href="registrazione-passeggero.html">passeggero</a></button>
 </body>
 </html>
