funzionalità lato docente e studente aggiunte

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="esercizio 1/esercizio1.php">esercizio 1</a></li>
             <li><a href="esercizio 2/esercizio2.php">esercizio 2</a></li>
             <li><a href="DB_es1/auth.html">esercizio database 1</a></li>
+            <li><a href="traccia_simulazione_esame/login.php">traccia simulazione esame</a></li>
             <li><a href="traccia_esame2017/auth.html">traccia esame 2017</a></li>
         </ul>
     </div>
