--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="DB_es1/auth.html">esercizio database 1</a></li>
             <li><a href="traccia_simulazione_esame/login.php">traccia simulazione esame</a></li>
             <li><a href="traccia_esame2017/auth.html">traccia esame 2017</a></li>
+            <li><a href="installazione/benvenuto.php">vacanze pasquali</a></li>
         </ul>
     </div>
 </body>
